Estilização das telas de acordo com o tema do projeto

--- a/Bolt/src/components/pages/Home.module.css
+++ b/Bolt/src/components/pages/Home.module.css
@@ -12,9 +12,8 @@
     margin-bottom: .5em;
 }
 .home_container h1 span{
-    color: #5254f2;
+    color: #ffee00;
     padding-inline-start: 0 .2em;
-    background-color: #222;
 }
 .home_container p{
     margin-bottom: 1.5em;
