--- a/Bolt/src/components/layout/NavBar.module.css
+++ b/Bolt/src/components/layout/NavBar.module.css
@@ -1,7 +1,7 @@
 .navbar{
     display: flex;
     justify-content: space-between;
-    background-color: #000154;
+    background-color: #000000;
     padding: 1em;;
 }
 
@@ -15,6 +15,12 @@
 .item{
     margin-right: 1em;
     color: white;
+    transition: .4s;    
+}
+
+.item:hover{
+    color: #ffee00;
+    font-size: 115%;
 }
 
 .logo{
