--- a/Bolt/src/components/pages/CreateGame.module.css
+++ b/Bolt/src/components/pages/CreateGame.module.css
@@ -1,8 +1,15 @@
-.create_book_container{
+.create_game_container{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 4em;
+}
+
+.forms{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    align-items: center;
 }
