--- a/Bolt/src/components/layout/NavBar.module.css
+++ b/Bolt/src/components/layout/NavBar.module.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     background-color: #000000;
-    padding: 1em;;
 }
 
 .list{
@@ -25,4 +24,8 @@
 
 .logo{
     width: 120px;
+}
+
+.navbar a{
+    text-decoration: none;
 }
