--- a/Bolt/src/components/CardGames.module.css
+++ b/Bolt/src/components/CardGames.module.css
@@ -10,26 +10,24 @@
     padding: 20px;
     border: 1px solid #CCC;
     font-family: Helvetica;
+    text-align: center;
 }
 
 .titulo {
     font-size: 24px;
     font-weight: bold;
     margin: 10px 0;
-    text-align: center;
 }
 
 .desenvolvedora {
     font-size: 18px;
     color: #555;
     margin-bottom: 15px;
-    text-align: center;
 }
 
-.descricao {
-    font-size: 16px;
-    color: #333;
-    text-align: center;
-    word-wrap: break-word;
-    margin-top: 10px;
+.imagem {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
